--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -13,7 +13,7 @@ extent.reporter.pdf.out=target/report/ExtentPdf.pdf
 extent.reporter.spark.config=src/main/resources/extent-config.xml
 extent.reporter.logger.config=src/main/resources/extent-config.xml
 
-extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
+extent.reporter.spark.vieworder=dashboard,test,categoryDTO,exception,author,device,log
 
 systeminfo.OS=Mac
 systeminfo.URL=https://api.tmsandbox.co.nz
