Working flow of testcase

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -18,4 +18,4 @@ extent.reporter.spark.vieworder=dashboard,test,categoryDTO,exception,author,devi
 systeminfo.OS=Mac
 systeminfo.URL=https://api.tmsandbox.co.nz
 systeminfo.Owner=Thenna Ashok
-systeminfo.Role=Automation Tester
+systeminfo.Role=Senior Test Automation Engineer
